Fix - 4 Added a z-index value of 100 to the navbar container to place the nav on top of all other items

--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -12,7 +12,7 @@
     border-bottom: 2px solid darkgray;
     padding-bottom: 10px;
     box-shadow: 0px 2px 5px darkgray;
-    z-index: 1;
+    z-index: 100;
 }
 
 .logo-container {
